# cstack

./: .gitignore  CMakeLists.txt  README.md  build.sh
docs/: 00-examples.md  index.md
examples/: 00-print-num.cst  01-arithmetics.cst  02-dup-swap.cst  03-over.cst  04-2dup-2swap.cst  05-drop.cst  06-if.cst  07-if-else.cst  08-macros.cst  09-logical-assert.cst
src/: compiler.c  compiler.h  flags.c  flags.h  instruction.c  instruction.h  interpreter.c  interpreter.h  main.c  source.c  source.h  token.c  token.h  tokenizer.c  tokenizer.h  util.c  util.h  vector_list.c  vector_list.h  vector_stack.c  vector_stack.h
test/: main.c  test_token.c  test_token.h  test_tokenizer.c  test_tokenizer.h  test_vector_list.h
